More config cleanup